# xiaoai-media

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHANGELOG_REMOVE_MI_PASS_TOKEN.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_ORGANIZATION_COMPLETE.md  Dockerfile  MIGRATION_SUMMARY.md  Makefile  ORGANIZATION_COMPLETE.md  PROXY_LAN_AUTH_IMPLEMENTATION.md  QUICK_START.md  README.md  docker-compose.yml  docker-entrypoint.sh  music_provider_template.py  playlists.json  user_config.example.py  user_config_template.py
backend/: log_config.json  migrate_to_unified_logger.py  pyproject.toml  run.py  test_unified_logger.py  verify_config_reload.py
backend/src/xiaoai_media/: client.py  command_handler.py  config.py  conversation.py  log_config.py  logger.py  playback_controller.py  playback_monitor.py  player.py  scheduler_executor.py
backend/src/xiaoai_media/api/: dependencies.py  main.py
backend/src/xiaoai_media/playlist/: __init__.py  service.py  storage.py
backend/src/xiaoai_media/services/: README.md  __init__.py  config_service.py  music_service.py  playlist_loader.py  playlist_models.py  playlist_service.py  playlist_storage.py  scheduler_service.py  state_service.py  user_service.py  (+1 more)
backend/tests/: README.md  test_artist_album_extraction.py  test_audio_duration.py  test_command_scheduler.py  test_config_reload.py  test_directory_sort.py  test_playback_controller.py  test_playlist_sorting.py  test_scheduler.py  test_sse_state.py  test_timezone_hot_reload.py  test_user_auth.py  test_user_config.py  test_user_login_enabled.py
docs/: BEFORE_AFTER.md  (+35 more)
(+345 files in other folders)
